fix dark mode, add card report, add news

--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,6 @@ html, body, main, footer {
 
 #btn-video {
     border-color: var(--secondary-color);
-    color: white;
     font-size: 18px;
     padding-left: 38px;
     padding-right: 38px;
@@ -97,7 +96,6 @@ html, body, main, footer {
     border-radius: 16px;
 }
 #btn-video:hover {
-    border-color: white;
     border-color: var(--secondary-color);
     background-color: var(--secondary-color);
 }
@@ -109,6 +107,12 @@ html, body, main, footer {
 .card-body {
     margin: 16px;
 }
+
+/* News */
+
+
+
+/* Close News */
 
 /* Close Main */
 
